# assembly_interpreter

./: AddOp.cpp  AddOp.hpp  CMakeLists.txt  CmpOp.cpp  IMutableValue.hpp  IOperation.hpp  IValue.hpp  Interpreter.cpp  Interpreter.hpp  JeqOp.cpp  JeqOp.hpp  JgrOp.cpp  JgrOp.hpp  JleOp.cpp  JleOp.hpp  JmpOp.cpp  JmpOp.hpp  Memory.cpp  Memory.hpp  MovOp.cpp  MovOp.hpp  MulOp.cpp  MulOp.hpp  PopOp.cpp  PopOp.hpp  PushOp.cpp  PushOp.hpp  README.md  ValueLiteral.cpp  ValueLiteral.hpp  ValueRegister.cpp  ValueRegister.hpp  main.cpp
